@@ -6,5 +6,9 @@ quelea (2016.2) stable; urgency=normal
   * Add native PowerPoint support
   * Aspect ratio fix
   * Fix for the projector not opening with the correct size on Linux
+  * Add more remote functionallity (move/remove schedule items, set/get theme)
+  * Update record icon
+  * Add option to adjust video volume
+  * Add elapsed and total time on video playback
 
  -- Michael Berry <michael@quelea.org>  Sunday, 26 May 2016 00:00:00 +0000
